# lliurex-wifi-gva-control

./: README.md  pyproject.toml  setup.py
debian/: changelog  control  copyright  lliurex-wifi-gva-control-cli.install  lliurex-wifi-gva-control-cli.pkexec  lliurex-wifi-gva-control.dirs  lliurex-wifi-gva-control.install  lliurex-wifi-gva-control.pofiles  lliurex-wifi-gva-control.postinst  lliurex-wifi-gva-control.prerm  lliurex-wifi-gva-control.zero  rules
lliurex-po/: generate_po.sh
lliurex-po/lliurex-wifi-gva-control/: ca@valencia.po  es.po  lliurex-wifi-gva-control.pot
lliurex-wifi-gva-control-cli/: __init__.py  lliurex-wifi-gva-control-cli
lliurex-wifi-gva-control-cli.install/: lliurex-wifi-gva-control-cli
lliurex-wifi-gva-control.install/launcher/: lliurex-wifi-gva-control
lliurex-wifi-gva-control.install/logrotate.d/: WIFI-GVA-CONTROL
lliurex-wifi-gva-control.install/rsyslog.d/: 100-wifi-gva-control.conf
lliurex-wifi-gva-control.install/ui/: LliurexWifiControl.py  N4dManager.py  lliurex-wifi-gva-control-gui.py
lliurex-wifi-gva-control.install/ui/rsrc/: ApplicationOptions.qml  ChangesDialog.qml  CustomPopup.qml  Loading.qml  MenuOptionBtn.qml  WifiOptions.qml  lliurex-wifi-control.qml  login.qml
lliurex-wifi-gva-control.zmds/: zero-lliurex-wifi-gva-control.app  zero-lliurex-wifi-gva-control.zmd
llx-resources/lliurex-wifi-gva-control/desktops/: lliurex-wifi-gva-control.desktop
